<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bnHome"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/bnHealth"
        android:enabled="true"
        android:icon="@drawable/ic_self_improvement"
        android:title="@string/healthcare"/>
    <item
        android:id="@+id/bnCounseling"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/counseling"/>
    <item
        android:id="@+id/bnSearch"
        android:enabled="true"
        android:icon="@drawable/ic_medical_services"
        android:title="@string/search"/>
    <item
        android:id="@+id/bnEmergency"
        android:enabled="true"
        android:icon="@drawable/ic_report"
        android:title="@string/emergency"/>
</menu>