<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/smallSpace"
    android:layout_marginBottom="@dimen/mediumSpace"
    android:layout_marginStart="@dimen/mediumSpace"
    android:layout_marginEnd="@dimen/mediumSpace"
    android:elevation="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgPsychologist"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_launcher_background"
            android:scaleType="centerCrop"
            android:contentDescription="@string/contentdescription"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvPsychologistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:lines="1"
                android:ellipsize="end"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />

            <TextView
                android:id="@+id/tvExperience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/loremipsum"
                android:lines="3"
                android:ellipsize="end"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                />

            <Button
                android:id="@+id/btnChat"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/request"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/mediumSpace"
                android:background="@drawable/btn_state"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>