<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent">

<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/mediumSpace"
        android:paddingEnd="@dimen/mediumSpace"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/backTopButton"
            android:layout_height="@dimen/backTopButton"
            android:backgroundTint="@android:color/black"
            android:background="@drawable/ic_keyboard_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mediumSpace"
            android:text="@string/profile"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</com.google.android.material.appbar.AppBarLayout>


<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/mediumSpace"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/profilePhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="750dp">

        <ImageView
            android:id="@+id/imgProfilePhoto"
            android:layout_width="136dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnChangeProfilePhoto"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@id/profilePhoto"
        android:layout_alignBottom="@id/profilePhoto"
        app:cardCornerRadius="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_camera" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>


<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/name"
    app:errorEnabled="true"
    android:layout_marginTop="@dimen/mediumSpace"
    android:layout_marginStart="@dimen/mediumSpace"
    android:layout_marginEnd="@dimen/mediumSpace"
    android:layout_marginBottom="@dimen/smallSpace"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</com.google.android.material.textfield.TextInputLayout>


<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/email"
    app:errorEnabled="true"
    android:layout_marginStart="@dimen/mediumSpace"
    android:layout_marginEnd="@dimen/mediumSpace"
    android:layout_marginBottom="@dimen/smallSpace"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        />

</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilAge"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/age"
    app:errorEnabled="true"
    android:layout_marginStart="@dimen/mediumSpace"
    android:layout_marginEnd="@dimen/mediumSpace"
    android:layout_marginBottom="@dimen/smallSpace"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

</com.google.android.material.textfield.TextInputLayout>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/mediumSpace"
    android:text="@string/gender"
    android:textSize="18sp"/>

<RadioGroup
    android:id="@+id/rgGender"
    android:checkedButton="@+id/radio_button_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/mediumSpace"
    android:layout_marginTop="@dimen/smallSpace"
    android:orientation="horizontal">
    <RadioButton
        android:id="@+id/rbMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorPrimaryDark"
        android:text="@string/male"/>

    <RadioButton
        android:id="@+id/rbFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mediumSpace"
        android:buttonTint="@color/colorPrimaryDark"
        android:text="@string/female" />
</RadioGroup>

<Button
    android:id="@+id/btnUpdate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/update"
    android:layout_margin="@dimen/mediumSpace"
    />

</LinearLayout>